<resources>
    <string name="app_name">RoomPractice</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_age">Age</string>
    <string name="label_add">Add</string>
    <string name="label_update">Update</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_menu_delete">Delete</string>
    <string name="label_address">Address</string>

</resources>